commit of the day

--- a/blog-project/src/index.scss
+++ b/blog-project/src/index.scss
@@ -225,7 +225,7 @@ body {
                 .post {
                     display: flex;
                     flex-direction: column;
-                    gap: 12dasdaspx;
+                    gap: 12dasspx;
                 }
                 img {
                     width: 100%;
