commit of the day

--- a/blog-project/src/index.scss
+++ b/blog-project/src/index.scss
@@ -226,6 +226,7 @@ body {
                     display: flex;
                     flex-direction: column;
                     gap: 10px;
+                    dasd
                 }
                 img {
                     width: 100%;
