--- a/blog-project/src/index.scss
+++ b/blog-project/src/index.scss
@@ -1,4 +1,9 @@
-$lightGreen: #23c4c4;
+$lightGreen: #b9e7e7;
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .app {
     .container {
         //login and register
@@ -9,6 +14,40 @@ $lightGreen: #23c4c4;
             justify-content: center;
             height: 100vh;
             background-color: $lightGreen;
+            h1 {
+                font-size: 20px;
+                color: teal;
+                margin-bottom: 20px;
+            }
+            form {
+                display: flex;
+                flex-direction: column;
+                padding: 50px;
+                background: white;
+                width: 200px;
+                gap: 20px;
+                input {
+                    padding: 10px;
+                    border: none;
+                    border-bottom: 1px solid gray;
+                }
+                button {
+                    padding: 10px;
+                    border: none;
+                    background: teal;
+                    cursor: pointer;
+                    color: white;
+                }
+                p {
+                    font-size: 12px;
+                    color: red;
+                    text-align: center;
+                }
+                span {
+                    font-size: 12px;
+                    text-align: center;
+                }
+            }
         }
     }
 }
