--- a/blog-project/src/index.scss
+++ b/blog-project/src/index.scss
@@ -5,7 +5,14 @@ body {
 }
 
 .app {
+    display: flex;
+    justify-content: center;
     .container {
+        width: 1024px;
+        .link {
+            color: black;
+            text-decoration: none;
+        }
         //login and register
         .auth {
             display: flex;
@@ -46,6 +53,49 @@ body {
                 span {
                     font-size: 12px;
                     text-align: center;
+                }
+            }
+        }
+        //navbar
+        .navbar {
+            .container {
+                padding: 10px 0px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                .logo {
+                    height: 10px;
+                    letter-spacing: 1px;
+                    font-weight: bolder;
+                    color: teal;
+                }
+                .links {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                }
+                h6 {
+                    font-size: 16px;
+                    font-weight: 300;
+                }
+                span {
+                    cursor: pointer;
+                }
+                .write {
+                    background: $lightGreen;
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-weight: 300;
+                    border: 1px solid white;
+                    &:hover {
+                        color: teal;
+                        background: white;
+                        border: 1px solid teal;
+                    }
                 }
             }
         }
