--- a/blog-project/src/index.scss
+++ b/blog-project/src/index.scss
@@ -176,5 +176,77 @@ body {
                 }
             }
         }
+        //single 
+        .single {
+            display: flex;
+            gap: 50px;
+            .content {
+                flex: 5;
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+                img {
+                    width: 100%;
+                    height: 300px;
+                    object-fit: cover;
+                }
+                .user {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    font-size: 14px;
+                    img {
+                        width: 50px;
+                        height: 50px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+                    span {
+                        font-weight: bold;
+                    }
+                }
+                .edit {
+                    display: flex;
+                    gap: 5px;
+                }
+                p {
+                    text-align: justify;
+                    line-height: 30px;
+                }
+            }
+            .menu {
+                flex: 2;
+                display: flex;
+                flex-direction: column;
+                gap: 25px;
+                h1 {
+                    font-size: 20px;
+                }
+                .post {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+                }
+                img {
+                    width: 100%;
+                    height: 150px;
+                    object-fit: cover;
+                }
+                button {
+                    width: max-content;
+                    padding: 10px 20px;
+                    border: none;
+                    cursor: pointer;
+                    background: white;
+                    border: 1px solid teal;
+                    color: teal;
+                    &:hover {
+                        border: 1px solid white;
+                        background-color: $lightGreen;
+                        color: black;
+                    }
+                }
+            }
+        }
     }
 }
