--- a/main/src/pages/blog/index.astro
+++ b/main/src/pages/blog/index.astro
@@ -5,10 +5,11 @@ import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
+import { getBlogPosts } from '../../services/fetch';
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
-);
+const posts = await getBlogPosts();
+
+console.log(posts)
 ---
 
 <!doctype html>
@@ -90,19 +91,19 @@ const posts = (await getCollection('blog')).sort(
 		<main>
 			<section>
 				<ul>
-					{
-						posts.map((post) => (
-							<li>
-								<a href={`/blog/${post.id}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
-								</a>
-							</li>
-						))
-					}
+					<!-- { -->
+					<!-- 	posts.map((post: any) => ( -->
+					<!-- 		<li> -->
+					<!-- 			<a href='#'> -->
+					<!-- 				<img width={720} height={360} src={post.data.heroImage} alt="" /> -->
+					<!-- 				<h4 class="title">{post.data.title}</h4> -->
+					<!-- 				<p class="date"> -->
+					<!-- 					<FormattedDate date={post.data.pubDate} /> -->
+					<!-- 				</p> -->
+					<!-- 			</a> -->
+					<!-- 		</li> -->
+					<!-- 	)) -->
+					<!-- } -->
 				</ul>
 			</section>
 		</main>
