--- a/main/src/pages/blog/index.astro
+++ b/main/src/pages/blog/index.astro
@@ -5,9 +5,9 @@ import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
-import { getBlogPosts } from '../../services/fetch';
+import { fetchBlogPosts } from '../../services/fetch';
 
-const posts = await getBlogPosts();
+const posts = await fetchBlogPosts();
 
 console.log(posts)
 
@@ -92,19 +92,18 @@ console.log(posts)
 		<main>
 			<section>
 				<ul>
-					<!-- { -->
-					<!-- 	posts.map((post: any) => ( -->
-					<!-- 		<li> -->
-					<!-- 			<a href='#'> -->
-					<!-- 				<img width={720} height={360} src={post.data.heroImage} alt="" /> -->
-					<!-- 				<h4 class="title">{post.data.title}</h4> -->
-					<!-- 				<p class="date"> -->
-					<!-- 					<FormattedDate date={post.data.pubDate} /> -->
-					<!-- 				</p> -->
-					<!-- 			</a> -->
-					<!-- 		</li> -->
-					<!-- 	)) -->
-					<!-- } -->
+					{
+						posts.map((post: any) => (
+							<li>
+								<a href='#'>
+									<h4 class="title">{post.title}</h4>
+									<p class="date">
+										<FormattedDate date={post.pubDate} />
+									</p>
+								</a>
+							</li>
+						))
+					}
 				</ul>
 			</section>
 		</main>
