--- a/main/src/pages/blog/index.astro
+++ b/main/src/pages/blog/index.astro
@@ -95,7 +95,7 @@ console.log(posts)
 					{
 						posts.map((post: any) => (
 							<li>
-								<a href='#'>
+            <a href={`/blog/${post.slug}`} class="block hover:shadow-lg transition-shadow duration-300 rounded-lg overflow-hidden border border-gray-200">
 									<h4 class="title">{post.title}</h4>
 									<p class="date">
 										<FormattedDate date={post.pubDate} />
