--- a/main/src/pages/index.astro
+++ b/main/src/pages/index.astro
@@ -10,35 +10,35 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
+	<body class="bg-black text-white">
 		<Header />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
+    <main class="w-3/6 mx-auto">
+			<h1 class="text-rose-400 text-2xl my-5">Welcome to memory fragments</h1>
+			<p class="tracking-wider text-lg">
 				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
 				template serves as a lightweight, minimally-styled starting point for anyone looking to build
 				a personal website, blog, or portfolio with Astro.
 			</p>
-			<p>
+			<p class="tracking-wider text-lg">
 				This template comes with a few integrations already configured in your
 				<code>astro.config.mjs</code> file. You can customize your setup with
 				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
 				React, or Vue to your project.
 			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
+			<p class="tracking-wider text-lg">Here are a few ideas on how to get started with the template:</p>
+			<ul class="flex flex-col gap-4 my-4">
 				<li>Edit this page in <code>src/pages/index.astro</code></li>
 				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
 				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
 				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
 				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
 			</ul>
-			<p>
+			<p class="tracking-wider text-lg">
 				Have fun! If you get stuck, remember to
 				<a href="https://docs.astro.build/">read the docs</a>
 				or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
 			</p>
-			<p>
+			<p class="tracking-wider text-lg">
 				Looking for a blog template with a bit more personality? Check out
 				<a href="https://github.com/Charca/astro-blog-template">astro-blog-template</a>
 				by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
