--- a/main/src/components/Header.astro
+++ b/main/src/components/Header.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE } from '../consts';
 
 <header>
   <nav class="flex w-3/6 mx-auto justify-between my-4 py-2">
-		<h2><a href="/">{SITE_TITLE}</a></h2>
+<h2 class="tracking-wider"><a href="/">{SITE_TITLE}</a></h2>
 		<div class="flex gap-4">
 			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/blog">Blog</HeaderLink>
