redefined names, and changed a few things here and there

--- a/main/src/components/Header.astro
+++ b/main/src/components/Header.astro
@@ -7,9 +7,9 @@ import { SITE_TITLE } from '../consts';
   <nav class="flex w-3/6 mx-auto justify-between my-4 py-2">
   <h2 class="tracking-wider"><a href="/">{SITE_TITLE}</a></h2>
 		<div class="flex gap-4">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href="/">Base</HeaderLink>
+			<HeaderLink href="/fragments">Fragments</HeaderLink>
+			<HeaderLink href="/list">Ink & Pixels</HeaderLink>
 		</div>
 	</nav>
 </header>
