--- a/main/src/components/Header.astro
+++ b/main/src/components/Header.astro
@@ -5,8 +5,8 @@ import { SITE_TITLE } from '../consts';
 
 <header>
   <nav class="flex w-3/6 mx-auto justify-between my-4 py-2">
-  <h2 class="tracking-wider"><a href="/">{SITE_TITLE}</a></h2>
-		<div class="flex gap-4">
+  <h2 class="tracking-wider text-lg"><a href="/">{SITE_TITLE}</a></h2>
+		<div class="flex gap-4 text-base">
 			<HeaderLink href="/">Base</HeaderLink>
 			<HeaderLink href="/fragments">Fragments</HeaderLink>
 			<HeaderLink href="/list">Ink & Pixels</HeaderLink>
