--- a/main/src/pages/fragments/index.astro
+++ b/main/src/pages/fragments/index.astro
@@ -25,8 +25,8 @@ console.log(posts)
 					{
 						posts.map((post: any) => (
 							<li>
-            <a href={`/blog/${post.slug}`} class="block hover:shadow-lg transition-shadow duration-300 rounded-lg overflow-hidden border border-gray-200">
-									<h4 class="title">{post.title}</h4>
+            <a href={`/blog/${post.slug}`} class="block hover:shadow-lg transition-shadow duration-300 rounded-lg overflow-hidden p-4 border border-gray-200">
+									<h4 class="title text-rose-400">{post.title}</h4>
 									<p class="date">
 										<FormattedDate date={post.pubDate} />
 									</p>
