--- a/main/src/pages/fragments/index.astro
+++ b/main/src/pages/fragments/index.astro
@@ -4,9 +4,10 @@ import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import FormattedDate from '../../components/FormattedDate.astro';
-import { fetchBlogPosts } from '../../services/fetch';
+import { getCollection } from '../../services/blog';
 
-const posts = await fetchBlogPosts();
+const posts = await getCollection('blog');
+
 ---
 
 <!doctype html>
@@ -22,10 +23,10 @@ const posts = await fetchBlogPosts();
 					{
 						posts.map((post: any) => (
 							<li>
-            <a href={`/blog/${post.slug}`} class="block hover:shadow-lg transition-shadow duration-300 rounded-lg overflow-hidden p-4 border border-gray-200">
-									<h4 class="title text-rose-400">{post.title}</h4>
+            <a href={`/fragments/${post.slug}`} class="block hover:shadow-lg transition-shadow duration-300 rounded-lg overflow-hidden p-4 border border-gray-200">
+									<h4 class="title text-rose-400">{post.data.title}</h4>
 									<p class="date">
-										<FormattedDate date={post.pubDate} />
+										<FormattedDate date={post.data.pubDate} />
 									</p>
 								</a>
 							</li>
