updated logs, added fetch functionality to b ring data from body of oogs

--- a/main/src/pages/list.astro
+++ b/main/src/pages/list.astro
@@ -1,5 +1,10 @@
 ---
 import Layout from '../layouts/BlogPost.astro';
+import { getLogs } from '../services/logs';
+
+const logs = await getLogs('logs');
+
+console.log(logs)
 ---
 
 <Layout
