--- a/main/src/pages/list.astro
+++ b/main/src/pages/list.astro
@@ -10,7 +10,7 @@ const content = marked(logs.body);
 
 <Layout
 	title="Logs"
-  description="list of resources, books, link to articles etc"
+  description="list of resources, books, articles, and more"
 	pubDate={new Date()}
 	heroImage="/blog-placeholder-about.jpg"
 >
