--- a/main/src/pages/fragments/[...slug].astro
+++ b/main/src/pages/fragments/[...slug].astro
@@ -15,6 +15,7 @@ const post = Astro.props;
 
 // Convert markdown to HTML
 const content = marked(post.body);
+console.log(content)
 ---
 
 <BlogPost {...post.data}>
