--- a/main/src/pages/list.astro
+++ b/main/src/pages/list.astro
@@ -12,7 +12,7 @@ const content = marked(logs.body);
 	title="Logs"
   description="list of resources, books, articles, and more"
 	pubDate={new Date()}
-	heroImage="/blog-placeholder-about.jpg"
+	heroImage="/bg.jpg"
 >
     <div class="log" set:html={content}></div>
 </Layout>
