--- a/main/src/layouts/BlogPost.astro
+++ b/main/src/layouts/BlogPost.astro
@@ -26,7 +26,6 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				<div class="prose">
 					<div class="title">
 						<div class="date">
-							<FormattedDate date={pubDate} />
 							{
 								updatedDate && (
 									<div class="last-updated-on">
@@ -35,7 +34,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 								)
 							}
 						</div>
-						<h1>{title}</h1>
+						<h3 class="my-4 text-2xl font-bold text-[#a7c080]">{title}</h3>
 						<hr />
 					</div>
 					<slot />
